ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/No_of_days_RC_Pending__c.field-meta.xml
<CustomField>
    <fullName>No_of_days_RC_Pending__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No of days RC Pending</label>
    <type>Checkbox</type>
</CustomField>