ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/No_of_Installment__c.field-meta.xml
<CustomField>
    <fullName>No_of_Installment__c</fullName>
    <label>No of Installment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>