ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/Non_Dlr_DSM_Name2__c.field-meta.xml
<CustomField>
    <fullName>Non_Dlr_DSM_Name2__c</fullName>
    <label>Non Dlr DSM Name2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>