ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/Offer_Agreement_Amount__c.field-meta.xml
<CustomField>
    <fullName>Offer_Agreement_Amount__c</fullName>
    <label>Offer Agreement Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>