ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/Offerengine_On_Road_Price__c.field-meta.xml
<CustomField>
    <fullName>Offerengine_On_Road_Price__c</fullName>
    <label>Offerengine On Road Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>