ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/Offerengine_StopJourney_Flag__c.field-meta.xml
<CustomField>
    <fullName>Offerengine_StopJourney_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Offer engine Stop Journey Flag</label>
    <type>Checkbox</type>
</CustomField>