ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/OfferengineMaxLoanAmount__c.field-meta.xml
<CustomField>
    <fullName>OfferengineMaxLoanAmount__c</fullName>
    <label>Offer engine Max Loan Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>