ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/OfferengineMaxTenure__c.field-meta.xml
<CustomField>
    <fullName>OfferengineMaxTenure__c</fullName>
    <label>Offer engine Max Tenure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>