ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/OfferengineMinLoanAmount__c.field-meta.xml
<CustomField>
    <fullName>OfferengineMinLoanAmount__c</fullName>
    <label>Offer engine Min Loan Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>