ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/OfferengineMinTenure__c.field-meta.xml
<CustomField>
    <fullName>OfferengineMinTenure__c</fullName>
    <label>Offer engine Min Tenure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>