ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/Permanent_Residence_FI__c.field-meta.xml
<CustomField>
    <fullName>Permanent_Residence_FI__c</fullName>
    <label>Permanent Residence FI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>