ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/Previous_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Previous_Loan_Amount__c</fullName>
    <description>This field is used to store the loan amount value before loan amount is updated on CAM screen</description>
    <label>Previous Loan Amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>