ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/Price_to_be_considered_for_Used__c.field-meta.xml
<CustomField>
    <fullName>Price_to_be_considered_for_Used__c</fullName>
    <label>Price to be considered for Used</label>
    <length>255</length>
    <type>Text</type>
</CustomField>