ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/PricingEngine_thresholdNetrr__c.field-meta.xml
<CustomField>
    <fullName>PricingEngine_thresholdNetrr__c</fullName>
    <label>Threshold Net IRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>