ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/RC_limit_enabled_DSA__c.field-meta.xml
<CustomField>
    <fullName>RC_limit_enabled_DSA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RC limit enabled DSA</label>
    <type>Checkbox</type>
</CustomField>