ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/RCU_Retention_Charges__c.field-meta.xml
<CustomField>
    <fullName>RCU_Retention_Charges__c</fullName>
    <label>RCU Retention Charges</label>
    <length>255</length>
    <type>Text</type>
</CustomField>