ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/Refered_By__c.field-meta.xml
<CustomField>
    <fullName>Refered_By__c</fullName>
    <label>Refered By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bank branch referral</fullName>
            </value>
            <value>
                <fullName>CFD ref.</fullName>
            </value>
            <value>
                <fullName>Direct sourcing</fullName>
            </value>
            <value>
                <fullName>Existing Customer Referral</fullName>
            </value>
            <value>
                <fullName>Ref. ref.</fullName>
            </value>
            <value>
                <fullName>Source Dealer</fullName>
            </value>
            <value>
                <fullName>Walk in Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>