ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/Referrer_Ben_Code__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Ben_Code__c</fullName>
    <label>Referrer Ben Code</label>
    <length>200</length>
    <type>Text</type>
</CustomField>