ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/Referrer_Name__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Name__c</fullName>
    <label>Referrer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>