ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/Refinance_cars__c.field-meta.xml
<CustomField>
    <fullName>Refinance_cars__c</fullName>
    <label>Refinance cars</label>
    <length>255</length>
    <type>Text</type>
</CustomField>