ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/Repayment_mode__c.field-meta.xml
<CustomField>
    <fullName>Repayment_mode__c</fullName>
    <label>Repayment mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
                <label>e-NACH</label>
            </value>
            <value>
                <fullName>A</fullName>
                <label>ACH</label>
            </value>
            <value>
                <fullName>I</fullName>
                <label>SI</label>
            </value>
            <value>
                <fullName>S</fullName>
                <label>IES</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>