ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/Required_CRM_IRR__c.field-meta.xml
<CustomField>
    <fullName>Required_CRM_IRR__c</fullName>
    <label>Offer engine Required CRM IRR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>