ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/Rreferrer_Incentive__c.field-meta.xml
<CustomField>
    <fullName>Rreferrer_Incentive__c</fullName>
    <label>Rreferrer Incentive</label>
    <length>255</length>
    <type>Text</type>
</CustomField>