ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/RTO_prefix__c.field-meta.xml
<CustomField>
    <fullName>RTO_prefix__c</fullName>
    <label>RTO prefix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>