ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/Scheme_Bank_offers__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Bank_offers__c</fullName>
    <label>Scheme (Bank offers)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>