ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/Schemes__c.field-meta.xml
<CustomField>
    <fullName>Schemes__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Schemes</label>
    <referenceTo>Schemes__c</referenceTo>
    <relationshipLabel>Final Terms</relationshipLabel>
    <relationshipName>Final_Terms</relationshipName>
    <type>Lookup</type>
</CustomField>