ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/Second_EMI_Date__c.field-meta.xml
<CustomField>
    <fullName>Second_EMI_Date__c</fullName>
    <label>Second EMI Date</label>
    <type>Date</type>
</CustomField>