ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/Service_charges__c.field-meta.xml
<CustomField>
    <fullName>Service_charges__c</fullName>
    <label>Service charges</label>
    <length>18</length>
    <type>Text</type>
</CustomField>