ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/Stamping_charges__c.field-meta.xml
<CustomField>
    <fullName>Stamping_charges__c</fullName>
    <label>Stamping charges</label>
    <length>18</length>
    <type>Text</type>
</CustomField>