ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/Structured_L1_Call__c.field-meta.xml
<CustomField>
    <fullName>Structured_L1_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Structured L1 Call</label>
    <type>Checkbox</type>
</CustomField>