ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/Table_Code__c.field-meta.xml
<CustomField>
    <fullName>Table_Code__c</fullName>
    <label>Table_Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>