ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/Tenure__c.field-meta.xml
<CustomField>
    <fullName>Tenure__c</fullName>
    <label>Offer engine Tenure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>