ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/Threshold_CRM_IRR__c.field-meta.xml
<CustomField>
    <fullName>Threshold_CRM_IRR__c</fullName>
    <label>Threshold CRM IRR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>