ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/Trade_certificate__c.field-meta.xml
<CustomField>
    <fullName>Trade_certificate__c</fullName>
    <label>Trade certificate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>