ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/fields/Verification_charges__c.field-meta.xml
<CustomField>
    <fullName>Verification_charges__c</fullName>
    <label>Verification charges</label>
    <length>18</length>
    <type>Text</type>
</CustomField>