ProdIND/ProdPrograms/force-app/main/default/objects/Final_Term__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Loan_Application__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Loan_Application__c</field>
        <operation>equals</operation>
        <value>L16042201513</value>
    </filters>
    <label>All</label>
</ListView>